spruce up landing page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,81 @@
-<a href="english/story.html">English</a> | <a href="portuguese/story.html">Portuguese</a>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>SSD MELS</title>
+  </head>
+  <body>
+    <!-- Container -->
+    <div class="container my-24 px-6 mx-auto">
+
+      <!-- Section: Design Block -->
+      <section class="mb-32 text-gray-800 text-center">
+
+        <img src="logo.png" class="w-80" />
+
+        <div class="grid lg:grid-cols-2 gap-6 xl:gap-x-12">
+
+
+          <div class="mb-6 lg:mb-0">
+            <div class="relative block bg-white rounded-lg shadow-lg">
+              <div class="flex">
+                <div
+                  class="relative overflow-hidden bg-no-repeat bg-cover relative overflow-hidden bg-no-repeat bg-cover shadow-lg rounded-lg mx-4 -mt-4"
+                  data-mdb-ripple="true" data-mdb-ripple-color="light">
+                  <img src="english.png" class="w-full" />
+                  <a href="english/story.html">
+                    <div
+                      class="absolute top-0 right-0 bottom-0 left-0 w-full h-full overflow-hidden bg-fixed opacity-0 hover:opacity-100 transition duration-300 ease-in-out"
+                      style="background-color: rgba(251, 251, 251, 0.15)"></div>
+                  </a>
+                </div>
+              </div>
+              <div class="p-6">
+                <h5 class="font-bold text-lg mb-3">English</h5>
+                <p class="text-gray-500 mb-4">
+                </p>
+                <p class="mb-4 pb-2">
+                  Welcome to this introductory course on implementing monitoring, evaluation and learning activities for the U.S. Agency for International Development in Mozambique. This training should take you 60 minutes or less to complete. <br />&nbsp;
+                </p>
+                <a href="portuguese/story.html" data-mdb-ripple="true" data-mdb-ripple-color="light"
+                  class="inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded-full shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">begin
+                  </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="mb-0">
+            <div class="relative block bg-white rounded-lg shadow-lg">
+              <div class="flex">
+                <div
+                  class="relative overflow-hidden bg-no-repeat bg-cover relative overflow-hidden bg-no-repeat bg-cover shadow-lg rounded-lg mx-4 -mt-4"
+                  data-mdb-ripple="true" data-mdb-ripple-color="light">
+                  <img src="portuguese.png" class="w-full" />
+                  <a href="portuguese/story.html">
+                    <div
+                      class="absolute top-0 right-0 bottom-0 left-0 w-full h-full overflow-hidden bg-fixed opacity-0 hover:opacity-100 transition duration-300 ease-in-out"
+                      style="background-color: rgba(251, 251, 251, 0.15)"></div>
+                  </a>
+                </div>
+              </div>
+              <div class="p-6">
+                <h5 class="font-bold text-lg mb-3">Português</h5>
+                <p class="text-gray-500 mb-4">
+                </p>
+                <p class="mb-4 pb-2">
+                  Boas-vindas a este curso introdut&#243;rio sobre a implementa&#231;&#227;o de actividades de  monitoria, avalia&#231;&#227;o e aprendizagem para a Ag&#234;ncia dos Estados Unidos para o Desenvolvimento Internacional em Mo&#231;ambique. Este treinamento dever&#225; ter a dura&#231;&#227;o de 60 minutos ou menos.
+                </p>
+                <a href="portuguese/story.html" data-mdb-ripple="true" data-mdb-ripple-color="light"
+                  class="inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded-full shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">começar
+                  </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+    </div>
+    <!-- Container  -->
+  </body>
+</html>
