add registration links

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <!-- Container -->
-    <div class="container my-24 px-6 mx-auto">
+    <div class="container my-4 px-3 mx-auto">
 
       <!-- Section: Design Block -->
       <section class="mb-32 text-gray-800 text-center">
@@ -38,9 +38,18 @@
                 <p class="mb-4 pb-2">
                   Welcome to this introductory course on implementing monitoring, evaluation and learning activities for the U.S. Agency for International Development in Mozambique. This training should take you 60 minutes or less to complete. <br />&nbsp;
                 </p>
-                <a href="english/story.html" data-mdb-ripple="true" data-mdb-ripple-color="light"
-                  class="inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded-full shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">begin
+                <p><a href="https://feedback.surveylab.com/pageTag/SurveyCampaign/cId/800dfb95846eb5962e9786bc1770ccb68615f1cb97" data-mdb-ripple="true" data-mdb-ripple-color="light" target="_blank"
+                  class="inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded-full shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">
+                  Step 1: Register
                   </a>
+                </p>
+                <br />
+                <p><a href="english/story.html" data-mdb-ripple="true" data-mdb-ripple-color="light"
+                  class="inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded-full shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">
+                  Step 2: Confirm registration and begin
+                  </a>
+                </p>
+                
               </div>
             </div>
           </div>
@@ -66,9 +75,18 @@
                 <p class="mb-4 pb-2">
                   Boas-vindas a este curso introdut&#243;rio sobre a implementa&#231;&#227;o de actividades de  monitoria, avalia&#231;&#227;o e aprendizagem para a Ag&#234;ncia dos Estados Unidos para o Desenvolvimento Internacional em Mo&#231;ambique. Este treinamento dever&#225; ter a dura&#231;&#227;o de 60 minutos ou menos.
                 </p>
-                <a href="portuguese/story.html" data-mdb-ripple="true" data-mdb-ripple-color="light"
-                  class="inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded-full shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">começar
+                <p><a href="https://feedback.surveylab.com/lng/pt/pageTag/SurveyCampaign/cId/800dfb95846eb5962e9786bc1770ccb68615f1cb97/" data-mdb-ripple="true" data-mdb-ripple-color="light" target="_blank"
+                  class="inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded-full shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">
+                  passo 1: cadastre-se
                   </a>
+                </p>
+                <br />
+                <p><a href="portuguese/story.html" data-mdb-ripple="true" data-mdb-ripple-color="light"
+                  class="inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded-full shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">
+                  passo 2: confirme o registro e comece
+                  </a>
+                </p>
+                
               </div>
             </div>
           </div>
