add language selection landing page

--- a/langselect.html
+++ b/langselect.html
@@ -24,7 +24,7 @@
                   class="relative overflow-hidden bg-no-repeat bg-cover relative overflow-hidden bg-no-repeat bg-cover shadow-lg rounded-lg mx-4 -mt-4"
                   data-mdb-ripple="true" data-mdb-ripple-color="light">
                   <img src="english.png" class="w-full" />
-                  <a href="https://feedback.surveylab.com/pageTag/SurveyCampaign/cId/800dfb95846eb5962e9786bc1770ccb68615f1cb97">
+                  <a href="english/story.html">
                     <div
                       class="absolute top-0 right-0 bottom-0 left-0 w-full h-full overflow-hidden bg-fixed opacity-0 hover:opacity-100 transition duration-300 ease-in-out"
                       style="background-color: rgba(251, 251, 251, 0.15)"></div>
@@ -38,9 +38,9 @@
                 <p class="mb-4 pb-2">
                   Welcome to this introductory course on implementing monitoring, evaluation and learning activities for the U.S. Agency for International Development in Mozambique. This training should take you 60 minutes or less to complete. <br />&nbsp;
                 </p>
-                <p><a href="https://feedback.surveylab.com/pageTag/SurveyCampaign/cId/800dfb95846eb5962e9786bc1770ccb68615f1cb97" data-mdb-ripple="true" data-mdb-ripple-color="light"
+                <p><a href="english/story.html" data-mdb-ripple="true" data-mdb-ripple-color="light"
                   class="inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded-full shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">
-                  Step 1: Register
+                  Step 2: Confirm registration and begin
                   </a>
                 </p>
                 <br />
@@ -56,7 +56,7 @@
                   class="relative overflow-hidden bg-no-repeat bg-cover relative overflow-hidden bg-no-repeat bg-cover shadow-lg rounded-lg mx-4 -mt-4"
                   data-mdb-ripple="true" data-mdb-ripple-color="light">
                   <img src="portuguese.png" class="w-full" />
-                  <a href="https://feedback.surveylab.com/lng/pt/pageTag/SurveyCampaign/cId/800dfb95846eb5962e9786bc1770ccb68615f1cb97/">
+                  <a href="portuguese/story.html">
                     <div
                       class="absolute top-0 right-0 bottom-0 left-0 w-full h-full overflow-hidden bg-fixed opacity-0 hover:opacity-100 transition duration-300 ease-in-out"
                       style="background-color: rgba(251, 251, 251, 0.15)"></div>
@@ -70,9 +70,9 @@
                 <p class="mb-4 pb-2">
                   Boas-vindas a este curso introdut&#243;rio sobre a implementa&#231;&#227;o de actividades de  monitoria, avalia&#231;&#227;o e aprendizagem para a Ag&#234;ncia dos Estados Unidos para o Desenvolvimento Internacional em Mo&#231;ambique. Este treinamento dever&#225; ter a dura&#231;&#227;o de 60 minutos ou menos.
                 </p>
-                <p><a href="https://feedback.surveylab.com/lng/pt/pageTag/SurveyCampaign/cId/800dfb95846eb5962e9786bc1770ccb68615f1cb97/" data-mdb-ripple="true" data-mdb-ripple-color="light" 
+                <p><a href="portuguese/story.html" data-mdb-ripple="true" data-mdb-ripple-color="light"
                   class="inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded-full shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">
-                  passo 1: cadastre-se
+                  passo 2: confirme o registro e comece
                   </a>
                 </p>
                 <br />
